[workspace]
members = ["ggsdk", "ggsdk_dynamic", "examples/treasure_hunter"]

[package]
name = "ggsdk"
version = "0.1.2"
edition = "2021"
description = "A crate that exports several types related to game development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horup/ggsdk-rs"

[lib]
crate-type = ["lib"]

[features]
dynamic = ["ggsdk_dynamic"]

[dependencies]
sdk = { path = "ggsdk", version = "0.1.2"}
ggsdk_dynamic = { path = "ggsdk_dynamic", optional = true, version = "0.1.2"}
