[workspace]
members = ["ggsdk_internal", "ggsdk_dynamic", "examples/treasure_hunter", "examples/gl"]
package.version = "0.1.8"

[workspace.dependencies]
ggsdk_internal = { path = "ggsdk_internal", version = "0.1.8"}
ggsdk_dynamic = { path = "ggsdk_dynamic", version = "0.1.8"}

[package]
name = "ggsdk"
version.workspace = true
edition = "2021"
description = "A crate that exports several types related to game development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horup/ggsdk-rs"

[lib]
crate-type = ["lib"]

[features]
dynamic = ["ggsdk_dynamic"]

[dependencies]
ggsdk_internal.workspace = true
ggsdk_dynamic = { workspace = true, optional = true}