[package]
name = "ggsdk_internal"
version = "0.1.5"
edition = "2024"
description = "A crate that exports several types related to game development"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horup/ggsdk-rs"

[lib]
crate-type = ["lib"]

[features]
matchbox = ["matchbox_socket"]

[dependencies]
eframe = "0.31.0"
glam = "0.29.2"
mockall = "0.13.1"
image = "0.25.5"
tracing = "0.1.41"
matchbox_socket = { version = "0.10.0", optional = true }
tiled = "0.13.0"
kira = "0.10.2"
web-time = "1.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing-subscriber = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rhai = "1.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-web = "0.1.3"
rhai = {version = "1.21.0", default-features = false, features = ["std", "wasm-bindgen"]}
futures = "0.3.31"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
] }
wasm-bindgen-futures = "0.4.50"